--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="language-selector">
         <button class="language-button">
             <i class="fas fa-globe"></i>
-            <span>EN</span>
+            <span id="language">EN</span>
             <i class="fas fa-chevron-down chevron-icon"></i>
         </button>
         <div class="language-dropdown">
@@ -128,7 +128,7 @@
                 <div class="location">
                 <input placeholder="Select Your location" type="text" class="locationInput">
                 <select class="selectLocation">
-                    <option>Indial Museum</option>
+                    <option>Indian Museum</option>
                     <option>Scince City</option>
                     <option>Prinsep Ghat</option>
                     <option>Eco Park</option>
@@ -177,7 +177,7 @@
                 <div class="location">
                 <input placeholder="Select Your location" type="text" class="locationInput">
                 <select class="selectLocation">
-                    <option>Indial Museum</option>
+                    <option>Indian Museum</option>
                     <option>Scince City</option>
                     <option>Prinsep Ghat</option>
                     <option>Eco Park</option>
@@ -226,7 +226,7 @@
                 <div class="location">
                 <input placeholder="Select Your location" type="text" class="locationInput">
                 <select class="selectLocation">
-                    <option>Indial Museum</option>
+                    <option>Indian Museum</option>
                     <option>Scince City</option>
                     <option>Prinsep Ghat</option>
                     <option>Eco Park</option>
@@ -277,7 +277,7 @@
                 <div class="location">
                 <input placeholder="Select Your location" type="text" class="locationInput">
                 <select class="selectLocation">
-                    <option>Indial Museum</option>
+                    <option>Indian Museum</option>
                     <option>Scince City</option>
                     <option>Prinsep Ghat</option>
                     <option>Eco Park</option>
