add new features

--- a/maps.html
+++ b/maps.html
@@ -16,7 +16,7 @@
 
   <style>
     html, body { margin: 0; padding: 0; height: 100%; font-family: Arial; }
-    #map { height: 100%; }
+    #map { width: 500px;  height: 500px;}
 
     .search-box {
       position: absolute;
