--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 <div style="position: absolute; right: 18px; top: 50%; transform: translateY(-50%); width: 20px; height: 20px; color: #333; cursor: pointer; font-size: 18px;"><i class="fa-solid fa-microphone"></i></div>
             </div>
             
-            <button style="width: 100%; background: #2c4a5a; color: white; border: none; padding: 20px; border-radius: 15px; font-size: 18px; font-weight: 600; cursor: pointer; margin-top: 20px; transition: all 0.2s;" onmouseover="this.style.background='#1e3a4a'; this.style.transform='translateY(-2px)'" onmouseout="this.style.background='#2c4a5a'; this.style.transform='translateY(0)'" onmousedown="this.style.transform='translateY(0)'" onmouseup="this.style.transform='translateY(-2px)'">Search Route</button>
+            <button style="width: 100%; background: #2c4a5a; color: white; border: none; padding: 20px; border-radius: 15px; font-size: 18px; font-weight: 600; cursor: pointer; margin-top: 20px; transition: all 0.2s;" onmouseover="this.style.background='#1e3a4a'; this.style.transform='translateY(-2px)'" onmouseout="this.style.background='#2c4a5a'; this.style.transform='translateY(0)'" onmousedown="this.style.transform='translateY(0)'" onmouseup="this.style.transform='translateY(-2px)'" onclick="searchRoutes()">Search Route</button>
         <button onclick="redirectToMapWithParams()" style="width: 100%; background: #2c4a5a; color: white; border: none; padding: 20px; border-radius: 15px; font-size: 18px; font-weight: 600; cursor: pointer; margin-top: 20px; transition: all 0.2s;" 
         onmouseover="this.style.background='#1e3a4a'; this.style.transform='translateY(-2px)'" 
         onmouseout="this.style.background='#2c4a5a'; this.style.transform='translateY(0)'" 
