--- a/index.html
+++ b/index.html
@@ -211,11 +211,11 @@
             </div>
             
             <button style="width: 100%; background: #2c4a5a; color: white; border: none; padding: 20px; border-radius: 15px; font-size: 18px; font-weight: 600; cursor: pointer; margin-top: 20px; transition: all 0.2s;" onmouseover="this.style.background='#1e3a4a'; this.style.transform='translateY(-2px)'" onmouseout="this.style.background='#2c4a5a'; this.style.transform='translateY(0)'" onmousedown="this.style.transform='translateY(0)'" onmouseup="this.style.transform='translateY(-2px)'" onclick="searchRoutes()">Find Bus</button>
-        <button onclick="redirectToMapWithParams()" style="width: 100%; background: #2c4a5a; color: white; border: none; padding: 20px; border-radius: 15px; font-size: 18px; font-weight: 600; cursor: pointer; margin-top: 20px; transition: all 0.2s;" 
+        <!-- <button onclick="redirectToMapWithParams()" style="width: 100%; background: #2c4a5a; color: white; border: none; padding: 20px; border-radius: 15px; font-size: 18px; font-weight: 600; cursor: pointer; margin-top: 20px; transition: all 0.2s;" 
         onmouseover="this.style.background='#1e3a4a'; this.style.transform='translateY(-2px)'" 
         onmouseout="this.style.background='#2c4a5a'; this.style.transform='translateY(0)'" 
         onmousedown="this.style.transform='translateY(0)'" 
-        onmouseup="this.style.transform='translateY(-2px)'">See Route on MAP</button>
+        onmouseup="this.style.transform='translateY(-2px)'">See Route on MAP</button> -->
         </div>
         
         <!-- Second Container -->
