Update header title to 'LOCAL BUS' and adjust image margin in styles

--- a/local.html
+++ b/local.html
@@ -72,7 +72,7 @@
     
            <div class="card" id="sbstc">
             <div class="card-header crop-header">
-                <h3>SBSTC </h3>
+                <h3>LOCAL BUS </h3>
                 <i class="fa-solid fa-bus"></i>
             </div>
             <div class="image">
