add new feature on side-bar

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
               <a href="#">Shortcuts</a>
             </li>
             <li>
-              <i class="fa-solid fa-photo-film"></i>
-              <a href="#">Share App</a>
+             <i class="fa-solid fa-location-dot"></i>
+              <a href="#" class="menu-link" id="location-link" onclick="fetchLocation()"> Fetch Current location</a>
             </li>
             <li>
              <i class="fa-solid fa-gear"></i>
