--- a/local.html
+++ b/local.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="wbtc.css"> 
      <link rel="stylesheet" href="style.css"> 
-    <link rel="icon" href="Bus logo.webp">
+    <link rel="icon" href="new_logo.jpg">
     <title>BUS-YATRA</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -24,7 +24,7 @@
                 <h1 class="text-xl font-bold text-blue-800" >LOCAL</h1>
                  <button type="button" class="btn btn-outline-primary" ><a href="index.html" style="text-decoration: none;">home</a></button>
    
- <button type="button" class="btn btn-outline-primary" ><a href="wbtc.html" style="text-decoration: none;">Fetch Current Location</a></button>
+ <!-- <button type="button" class="btn btn-outline-primary" ><a href="wbtc.html" style="text-decoration: none;">Fetch Current Location</a></button> -->
     
             </div>
       
